[metadata]
name = PyStrong
version = 0.0.4
author = Julian Baugartner
author_email = jbaumgartner93@gmail.com
description = Type enforement for python objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyptocrypto/Pystrong
project_urls =
    Bug Tracker = https://github.com/hyptocrypto/Pytstrong/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
